--- a/README
+++ b/README
@@ -2,3 +2,8 @@ Flash Card / QnA project proof of concept
 -----------------------------------------
 
 This is a proof of concept for what could be a project in the UtahRETC Java Programmer 1 Class. Summary: build a flash card/test prep/QnA app that runs on the terminal on has a GUI.
+
+To build and test the project, run the following:
+
+    gradle build
+    gradle test
