--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Flash Card / QnA project proof of concept
+Flash Card / Q&A project proof of concept
 -----------------------------------------
 
-This is a proof of concept for what could be a project in the UtahRETC Java Programmer 1 Class. Summary: build a flash card/test prep/QnA app that runs on the terminal on has a GUI.
+This is a proof of concept for what could be a project in the UtahRETC Java Programmer 1 Class. Summary: build a flash card/test prep/Q&A app that runs on the terminal on has a GUI.
 
 To build and test the project, run the following:
 
